--- a/.github/workflows/appinspect_cli.yml
+++ b/.github/workflows/appinspect_cli.yml
@@ -50,3 +50,8 @@ jobs:
         with:
           app_path: package.tar.gz
           included_tags: cloud, splunk_appinspect
+          
+      - name: Send data to OTLP backend
+        uses: codeboten/github-action-to-otlp@v1
+        with:
+          endpoint: "20.163.240.115:4317"
