--- a/.github/workflows/appinspect_cli.yml
+++ b/.github/workflows/appinspect_cli.yml
@@ -62,4 +62,5 @@ jobs:
         uses: inception-health/otel-export-trace-action@latest
         with:
           otlpEndpoint: grpc://20.163.240.115:4317/
-          otlpHeaders: "x-honeycomb-team=YOUR_API_KEY,x-honeycomb-dataset=YOUR_DATASET"
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          runId: ${{ github.event.workflow_run.id }}
