--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -1,27 +1,16 @@
-name: Basic Job
+name: OpenTelemetry Export Trace
 
-# Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["*"]
+    types: [completed]
 
 jobs:
-  inspect:
+  otel-export-trace:
+    name: OpenTelemetry Export Trace
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-          
       - name: Export Workflow Trace
-        if: always()
         uses: inception-health/otel-export-trace-action@latest
         with:
           otlpEndpoint: grpc://20.163.240.115:4317/
