--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -14,5 +14,6 @@ jobs:
         uses: inception-health/otel-export-trace-action@latest
         with:
           otlpEndpoint: grpc://20.163.240.115:4317/
+          otelServiceName: "GitHubWorkflows"
           githubToken: ${{ secrets.TOKEN_GITHUB }}
           runId: ${{ github.event.workflow_run.id }}
